--- a/ClientApplication/pom.xml
+++ b/ClientApplication/pom.xml
@@ -3,18 +3,20 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
+	<groupId>com.bookmyslot</groupId>
+	<artifactId>ClientApplication</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+
+	<packaging>war</packaging>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.0-SNAPSHOT</version>
+		<version>2.3.1.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.bookmyslot</groupId>
-	<artifactId>client</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>client</name>
-	<description>Demo project for Spring Boot</description>
-	<packaging>war</packaging>
+
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -33,11 +35,11 @@
 		</dependency>
 
 		<!-- Tomcat Embed -->
-	<dependency>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-tomcat</artifactId>
-		<scope>provided</scope>
-	</dependency> 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
 
 		<!-- JSTL -->
 		<dependency>
@@ -52,49 +54,29 @@
 			<scope>provided</scope>
 		</dependency>
 
-	<!-- 	<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>bootstrap</artifactId>
-			<version>4.3.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>bootstrap-datepicker</artifactId>
-			<version>1.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>jquery</artifactId>
-			<version>3.4.1</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>org.webjars</groupId> <artifactId>bootstrap</artifactId> 
+			<version>4.3.1</version> </dependency> <dependency> <groupId>org.webjars</groupId> 
+			<artifactId>bootstrap-datepicker</artifactId> <version>1.0.1</version> </dependency> 
+			<dependency> <groupId>org.webjars</groupId> <artifactId>jquery</artifactId> 
+			<version>3.4.1</version> </dependency> -->
 
 		<!-- https://mvnrepository.com/artifact/org.webjars.npm/jquery-slim -->
-		<!-- <dependency>
-			<groupId>org.webjars.npm</groupId>
-			<artifactId>jquery-slim</artifactId>
-			<version>3.0.0</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>org.webjars.npm</groupId> <artifactId>jquery-slim</artifactId> 
+			<version>3.0.0</version> </dependency> -->
 	</dependencies>
 
 	<build>
+		<finalName>ROOT</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			<!-- <plugin>
-			<artifactId>maven-war-plugin</artifactId>
-				<version>2.4</version>
-				<configuration>
-					<warSourceDirectory>WebContent</warSourceDirectory>
-					<failOnMissingWebXml>false</failOnMissingWebXml>
-				</configuration>
-			</plugin> -->
 		</plugins>
-		
 	</build>
 
-	<repositories>
+ <!-- (you don't need this if you are using a .RELEASE version) -->
+<!-- 	<repositories>
 		<repository>
 			<id>spring-milestones</id>
 			<name>Spring Milestones</name>
@@ -123,6 +105,6 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</pluginRepository>
-	</pluginRepositories>
+	</pluginRepositories> -->
 
 </project>
